Split spring jpa and hibernate tenants
- Bump docker containers up to jdk 25